# naver-blog-mcp-codex

./: .env.example  .gitignore  AGENTS.md  README.md  codex_mcp_config.example.toml  main.py  pyproject.toml  test_mcp_tools.py
docs/: architecture.md  codex-guide.md  deployment-guide.md  easy-start-guide.md  implementation-plan.md  installation-guide.md  progress.md  user-guide.md
src/naver_blog_mcp/: config.py  server.py
src/naver_blog_mcp/automation/: category_actions.py  image_upload.py  login.py  post_actions.py  selectors.py
src/naver_blog_mcp/mcp/: tools.py
src/naver_blog_mcp/services/: session_manager.py
src/naver_blog_mcp/utils/: error_handler.py  selector_helper.py  trace_manager.py
tests/: test_image_upload.py  test_integration.py  test_post_content_blocks.py  test_post_write.py  test_security_guards.py
